@@ -21,6 +21,22 @@
 
 #include <sandix/types.h>
 #include <sandix/kernel.h>
+#include <sandix/compiler.h>
+
+#define __BUILD_BUG_ON(condition, msg, prefix, suffix)			\
+do {									\
+	extern void prefix ## suffix(void) __compiletime_error(msg);	\
+									\
+	bool __cond = !(condition);					\
+	if (__cond)							\
+		prefix ## suffix();					\
+} while (0)
+
+#define _BUILD_BUG_ON(condition, msg, prefix, suffix)			\
+	__BUILD_BUG_ON(condition, msg, prefix, suffix)
+
+#define BUILD_BUG_ON(condition, msg)					\
+	_BUILD_BUG_ON(condition, msg, __func__, __LINE__)
 
 /*
  * Don't use BUG() or BUG_ON() unless there's really no way out; one
