@@ -6,3 +6,6 @@ obj-y := main.o
 obj-y += init_task.o
 obj-y += calibrate.o
 obj-y += version.o
+
+
+extry-y += main.i
