@@ -38,3 +38,18 @@ struct resource iomem_resource = {
 	.flags	= IORESOURCE_MEM
 };
 EXPORT_SYMBOL(iomem_resource);
+
+/* a read/write lock is more efficient */
+static DEFINE_SPINLOCK(resource_lock);
+
+int release_resource(struct resource *old)
+{
+	return 0;
+}
+EXPORT_SYMBOL(release_resource);
+
+int request_resource(struct resource *root, struct resource *new)
+{
+	return 0;
+}
+EXPORT_SYMBOL(request_resource);
