@@ -545,3 +545,4 @@ Mon Feb 22 11:04:52 CST 2016
 Tue Feb 23 12:48:24 CST 2016
 - [+] kernel/resource.c
 - [M] arch/x86/kernel/setup.c
+- [M] include/sandix/bug.h			[D] BUILD_BUG_ON
